# ded2018-iron-stack

./: CMakeLists.txt  README.md  verificator.py
include/: iron_stack.h  murmur3.h
src/: main.cpp
